--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -471,16 +471,16 @@ jobs:
 
       - uses: Noelware/docker-manifest-action@0.4.3
         with:
-          inputs: aminya/${{ matrix.container.image }}:${{ matrix.container.tag }}
-          images: aminya/${{ matrix.container.image }}:${{ matrix.container.tag }}-amd64,aminya/${{ matrix.container.image }}:${{ matrix.container.tag }}-arm64
+          inputs: aminya/${{ matrix.container.image }}${{ matrix.container.suffix }}:${{ matrix.container.tag }}
+          images: aminya/${{ matrix.container.image }}${{ matrix.container.suffix }}:${{ matrix.container.tag }}-amd64,aminya/${{ matrix.container.image }}${{ matrix.container.suffix }}:${{ matrix.container.tag }}-arm64
           push: true
           amend: true
 
       - uses: Noelware/docker-manifest-action@0.4.3
         if: ${{ matrix.container.latest }}
         with:
-          inputs: aminya/${{ matrix.container.image }}:latest
-          images: aminya/${{ matrix.container.image }}:${{ matrix.container.tag }}-amd64,aminya/${{ matrix.container.image }}:${{ matrix.container.tag }}-arm64
+          inputs: aminya/${{ matrix.container.image }}${{ matrix.container.suffix }}:latest
+          images: aminya/${{ matrix.container.image }}${{ matrix.container.suffix }}:${{ matrix.container.tag }}-amd64,aminya/${{ matrix.container.image }}${{ matrix.container.suffix }}:${{ matrix.container.tag }}-arm64
           push: true
           amend: true
 
