feat: add alpine installers for all tools

--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "safe-stable-stringify": "^2.5.0",
     "semver": "7.7.1",
     "setup-apt": "workspace:*",
+    "setup-alpine": "workspace:*",
     "setup-brew": "workspace:*",
     "setup-python": "github:aminya/setup-python#9700887",
     "shx": "0.4.0",
@@ -184,6 +185,7 @@
     "retry-as-promised",
     "semver",
     "setup-apt",
+    "setup-alpine",
     "setup-brew",
     "setup-python",
     "simple-update-notifier",
