--- a/packages/setup-alpine/package.json
+++ b/packages/setup-alpine/package.json
@@ -29,8 +29,7 @@
     "ci-log": "workspace:*",
     "envosman": "workspace:*",
     "which": "4.0.0",
-    "escape-string-regexp": "^5.0.0",
-    "node-downloader-helper": "2.1.9",
+    "execa": "7.2.0",
     "memoizee": "^0.4.17"
   },
   "engines": {
