--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -244,7 +244,7 @@ jobs:
           - { distro: "ubuntu", image: "setup-cpp-ubuntu", BASE_VERSION: "20.04", tag: "20.04-1.3.0" }
           - { distro: "fedora", image: "setup-cpp-fedora", tag: "40-1.3.0" }
           - { distro: "arch", image: "setup-cpp-arch", tag: "base-1.3.0" }
-          - { distro: "alpine", image: "setup-cpp-alpine", BASE_VERSION: "22-alpine3.21", tag: "22-alpine3.21-1.3.0" }
+          - { distro: "alpine", image: "setup-cpp-alpine", BASE_VERSION: "22-alpine3.21", tag: "3.21-1.3.0" }
         include:
           - os: ubuntu-24.04-arm
             platform: linux/arm64
@@ -255,10 +255,9 @@ jobs:
           - os: ubuntu-24.04-arm
             platform: linux/arm64
             container: { distro: "ubuntu", image: "setup-cpp-ubuntu", BASE_VERSION: "20.04", tag: "20.04-1.3.0" }
-          - os: ubuntu-24.04
-            platform: linux/amd64
-            container:
-              { distro: "alpine", image: "setup-cpp-alpine", BASE_VERSION: "22-alpine3.21", tag: "22-alpine3.21-1.3.0" }
+          - os: ubuntu-24.04-arm
+            platform: linux/arm64
+            container: { distro: "alpine", image: "setup-cpp-alpine", BASE_VERSION: "22-alpine3.21", tag: "3.21-1.3.0" }
     steps:
       - uses: actions/checkout@v4
         with:
@@ -401,7 +400,7 @@ jobs:
 
       - name: Build setup-cpp-${{matrix.container.distro }}-mingw
         id: build_mingw
-        if: ${{ matrix.container.distro != 'fedora' }}
+        if: ${{ matrix.container.distro != 'fedora' && !(matrix.container.distro == 'alpine' && matrix.platform == 'linux/arm64') }}
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -415,7 +414,7 @@ jobs:
           cache-to: type=inline
 
       - name: Tag latest locally
-        if: ${{ matrix.container.distro != 'fedora' }}
+        if: ${{ matrix.container.distro != 'fedora' && !(matrix.container.distro == 'alpine' && matrix.platform == 'linux/arm64') }}
         run: |
           docker tag aminya/${{ matrix.container.image }}-mingw:${{ matrix.container.tag }}-${{ steps.platform.outputs.suffix }} aminya/${{ matrix.container.image }}-mingw:latest
 
@@ -424,7 +423,7 @@ jobs:
         run: docker push aminya/${{ matrix.container.image }}-mingw:latest
 
       - name: Docker Readme for setup-cpp-${{matrix.container.distro }}-mingw
-        if: ${{ github.event_name != 'pull_request' && matrix.container.distro != 'fedora' }}
+        if: ${{ github.event_name != 'pull_request' && matrix.container.distro != 'fedora' && !(matrix.container.distro == 'alpine' && matrix.platform == 'linux/arm64') }}
         uses: peter-evans/dockerhub-description@v4
         with:
           username: aminya
@@ -433,7 +432,7 @@ jobs:
           readme-filepath: ./README_DOCKER.md
 
       - name: Test Mingw
-        if: ${{ !contains(github.event.head_commit.message, '[skip test]') && matrix.container.distro != 'fedora' }}
+        if: ${{ !contains(github.event.head_commit.message, '[skip test]') && matrix.container.distro != 'fedora' && !(matrix.container.distro == 'alpine' && matrix.platform == 'linux/arm64') }}
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -465,10 +464,10 @@ jobs:
           - { distro: "ubuntu", image: "setup-cpp-ubuntu", tag: "24.04-1.3.0", suffix: "-gcc", latest: true }
           - { distro: "ubuntu", image: "setup-cpp-ubuntu", tag: "24.04-1.3.0", suffix: "-mingw", latest: true }
 
-          - { distro: "alpine", image: "setup-cpp-alpine", tag: "22-alpine3.21-1.3.0", suffix: "", latest: true }
-          - { distro: "alpine", image: "setup-cpp-alpine", tag: "22-alpine3.21-1.3.0", suffix: "-llvm", latest: true }
-          - { distro: "alpine", image: "setup-cpp-alpine", tag: "22-alpine3.21-1.3.0", suffix: "-gcc", latest: true }
-          - { distro: "alpine", image: "setup-cpp-alpine", tag: "22-alpine3.21-1.3.0", suffix: "-mingw", latest: true }
+          - { distro: "alpine", image: "setup-cpp-alpine", tag: "3.21-1.3.0", suffix: "", latest: true }
+          - { distro: "alpine", image: "setup-cpp-alpine", tag: "3.21-1.3.0", suffix: "-llvm", latest: true }
+          - { distro: "alpine", image: "setup-cpp-alpine", tag: "3.21-1.3.0", suffix: "-gcc", latest: true }
+          - { distro: "alpine", image: "setup-cpp-alpine", tag: "3.21-1.3.0", suffix: "-mingw", latest: true }
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
